--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <p>Me chamo Daniel, sou um apaixonado por tecnologia, robótica e programação. Sou técnico em Informatica formado no IFNMG-campus Januária e atual graduando Engenharia de Controle e Automação no CEFET-MG campus Leopoldina-MG</p>
 
-        <p>Sempre gostei demais de programação web principalmente front-end passei muito tempo parado porem estou voltando a mexer com esse mundo incrivel que é o mundo do front-end. Graças ao pessoal da alura pude voltar a rever muitos conceitos que a muito tempo não via e também conceitos novos que eu nunca tinha visto, então só tenho a agradecer a toda galera da Alura que promoveu esse workshop sobre Css</p>
+        <p>Sempre gostei de programação web principalmente a parte do front-end, passei muito tempo parado porém estou voltando a mexer com esse mundo incrivel que é o mundo do front-end. Graças ao pessoal da alura pude voltar a rever muitos conceitos que a muito tempo não via e também conceitos novos que eu nunca tinha visto, então só tenho a agradecer a toda galera da Alura que promoveu esse workshop sobre Css</p>
 
         <p>Este site foi contruído durante a <a href="https://www.alura.com.br/imersao-css">Imersão CSS da alura</a> ;) </p>
       </section>
@@ -77,7 +77,7 @@
                   <img class="img-portfolio" src="img/web.jpeg" alt="Web design">
                   <figcaption>Web design</figcaption>
               </figure>
-              <div class="card-back">Apaixonado por webdesign e disposto a predner cada vez mais</div>
+              <div class="card-back">Apaixonado por webdesign e disposto á aprender cada vez mais</div>
           </div>
           </div>
           
